--- a/Tienda-TareaFinal-Angular2/package.json
+++ b/Tienda-TareaFinal-Angular2/package.json
@@ -25,7 +25,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular": "^1.7.2",
+    "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "materialize-css": "^0.100.2",
     "mongo-client": "^0.2.1",
     "mongod": "^2.0.0",
