--- a/Tienda-TareaFinal-Angular2/package.json
+++ b/Tienda-TareaFinal-Angular2/package.json
@@ -17,30 +17,36 @@
     "@angular/cdk": "^2.0.0",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
+    "@angular/core": "^5.0.5",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/material": "^2.0.0",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angular": "^1.7.2",
+    "angular": "^1.7.3",
+    "angular-animate": "^1.7.3",
+    "angular-aria": "^1.7.3",
+    "angular-material": "^1.1.10",
+    "angular-messages": "^1.7.3",
     "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "istanbul-lib-hook": "^1.1.0",
     "materialize-css": "^0.100.2",
     "mongo-client": "^0.2.1",
     "mongod": "^2.0.0",
-    "mongodb": "^2.2.31",
+    "mongodb": "^2.2.36",
     "mongoose": "^4.13.14",
     "ng": "0.0.0-rc6",
     "ng2-filter-pipe": "^0.1.10",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "ngx-filter-pipe": "^2.1.0",
+    "rxjs": "^5.5.11",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "^6.1.3",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
@@ -58,6 +64,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "^2.3.4"
   }
 }
